--- a/Css/style.css
+++ b/Css/style.css
@@ -1,14 +1,18 @@
-
+@font-face {
+  font-family: dancing;
+  src: url(DancingScript-VariableFont_wght.woff2);
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  font-family: 'dancing', cursive;
 }
 
 :root {
-  --Tcolor: #eee;
-  --Bcolor: crimson;
+  --Text-color : #ffffff;
+  --Main-color : crimson
 }
 
 html {
@@ -22,11 +26,12 @@ html {
 canvas {
   background-color: #000;
   width: 100%;
+  height: 100vh;
 }
 
 a {
   text-decoration: none;
-  color: var(--Tcolor);
+  color: var(--Text-color);
 }
 
 header {
@@ -47,7 +52,7 @@ header {
   position: fixed;
   top: 2.5rem;
   right: 2.5rem;
-  color: var(--Bcolor);
+  color: var(--Main-color);
   font-size: 3rem;
   cursor: pointer;
   z-index: 1000;
@@ -67,9 +72,8 @@ nav {
   position: absolute;
 }
 /* Add this style for the scrolled state */
-nav.scrolled {
-  background-color: rgb(255, 255, 255);
-}
+
+
 
 .brand {
   font-size: 33px;
@@ -79,7 +83,7 @@ nav.scrolled {
 }
 
 .brand span {
-  color: var(--Bcolor);
+  color: var(--Main-color);
 }
 
 nav ul {
@@ -113,7 +117,7 @@ nav ul li a {
   margin: 0 3rem;
   position: relative;
   letter-spacing: 2px;
-  color: var(--Tcolor);
+  color: var(--Text-color);
   /* Set the color of the navigation links */
 }
 
@@ -127,7 +131,7 @@ nav ul li a::after {
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: var(--Bcolor);
+  background-color: var(--Main-color);
   left: 0;
   transform: scaleX(0);
   transition: all 0.5s;
@@ -143,18 +147,6 @@ nav ul li a::after {
   transform-origin: right;
 }
 
-.overlay {
-  background-color: rgba(0, 0, 0, 0.95);
-  position: fixed;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  transition: opacity 650ms;
-  transform: scale(0);
-  opacity: 0;
-  display: none;
-}
 
 nav ul li a:hover::before,
 nav ul li a:hover::after {
@@ -178,7 +170,7 @@ div {
 }
 .home-content {
   max-width: 600px;
-  color: white;
+  color: var(--Text-color);
   position: absolute;
   top: 50%; /* Adjusted to 50% */
   left: 50%; /* Centering */
@@ -186,18 +178,19 @@ div {
   list-style: none;
   /* border: 2px solid rgb(0, 255, 34); */
   position: absolute;
+  font-family: 'Dancing Script', cursive;
   text-align: center;
 }
 
 .Itme {
-  font-size: 26px;
+  font-size: 32px;
   transform: translateX(-100rem);
   animation: slideIn 0.5s forwards;
-  animation-delay: 0s;
+  animation-delay: 0s;  
 }
 
 .home-content h1 {
-  font-size: 40px;
+  font-size: 46px;
   font-weight: 700;
   /* margin: -3px -3px; */
   transform: translateX(-100rem);
@@ -206,7 +199,7 @@ div {
 }
 
 .home-content .Ai {
-  font-size: 30px;
+  font-size: 32px;
   font-weight: 700;
   transform: translateX(-100rem);
   animation: slideIn 0.5s forwards;
@@ -215,7 +208,7 @@ div {
 }
 
 .home-content p {
-  font-size: 20px;
+  font-size: 21px;
   margin-top: 2px;
   text-transform: capitalize;
   transform: translateX(-100rem);
@@ -227,8 +220,213 @@ div {
   margin-top: 30px;
 }
 
+
+.scroll-down-wrap{
+    position: fixed; /* Change from absolute to fixed */
+    bottom: 20px;
+    right: 20px; /* Adjusted right value */
+    width: 60px;
+    z-index: 101;
+  transition:opacity 0.4s ease;
+  -webkit-transition:opacity 0.4s ease;
+  -moz-transition:opacity 0.4s ease;
+}
+.scroll-down-wrap,.scroll-down-wrap.no-border{
+  position:absolute;
+  bottom:30px;
+  width:60px;
+  right: 5%;
+  margin-left:-30px;
+  z-index:101;
+}
+.scroll-down-wrap.no-border,.scroll-down-wrap.no-border{
+  bottom:12px;
+}
+.scroll-down-wrap.no-border .section-down-arrow{
+  display:inline-block;
+  width:49px;
+  height:49px;
+  color:#fff!important;
+  border:2px solid #fff;
+  text-align:center;
+  line-height:50px;
+  border-radius:100px;
+  font-size:25px;
+  -webkit-border-radius:100px;
+  transition:opacity 0.4s ease;
+  -webkit-transition:opacity 0.4s ease;
+  -moz-transition:opacity 0.4s ease;
+  overflow:hidden;
+  margin-left:0px;
+  left:0;
+  bottom:16px;
+  opacity:0.6;
+}
+.scroll-down-wrap.no-border .section-down-arrow,.slider-down-arrow.no-border{
+  border:none!important;
+  overflow:visible;
+  text-align:center;
+  opacity:1;
+  height:auto;
+  bottom:13px;
+  -webkit-animation:nudgeMouse 2.4s cubic-bezier(0.250,0.460,0.450,0.940) infinite;
+  animation:nudgeMouse 2.4s cubic-bezier(0.250,0.460,0.450,0.940) infinite;
+}
+.nectar-scroll-icon-path{
+  fill:transparent;
+  stroke-width:2px;
+  stroke-dashoffset:120;
+  stroke-dasharray:120;
+  -webkit-animation:mouse-scroll-btn-roll-out .55s cubic-bezier(.5,.1,.07,1);
+  animation:mouse-scroll-btn-roll-out .55s cubic-bezier(.5,.1,.07,1);
+}
+.nectar-scroll-icon{
+  width:30px;
+  height:45px;
+  text-align:center;
+  cursor:pointer;
+  position:relative;
+  z-index:100;
+}
+.scroll-down-wrap.no-border .section-down-arrow:after,.slider-down-arrow.no-border:after{
+  content:"";
+  position:absolute;
+  top:0;
+  left:50%;
+  display:block;
+  width:30px;
+  height:45px;
+  margin-left:-15px;
+  border:2px solid rgba(255,255,255,0.5);
+  border-radius:30px;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box;
+  z-index:62;
+}
+.scroll-down-wrap.no-border:hover .section-down-arrow:before, .slider-down-arrow.no-border:hover:before{
+  background-color:rgba(255,255,255,1);
+}
+.scroll-down-wrap.no-border:hover .nectar-scroll-icon-path, .slider-down-arrow.no-border:hover .nectar-scroll-icon-path{
+  stroke-dashoffset:0;
+  -webkit-animation:mouse-scroll-btn-roll-over .55s cubic-bezier(.5,.1,.07,1);
+  animation:mouse-scroll-btn-roll-over .55s cubic-bezier(.5,.1,.07,1)
+}
+@-webkit-keyframes mouse-scroll-btn-roll-over{
+  0%{stroke-dashoffset:120}
+  100%{stroke-dashoffset:0}
+}
+@keyframes mouse-scroll-btn-roll-over{
+  0%{stroke-dashoffset:120}
+  100%{stroke-dashoffset:0}
+}
+@-webkit-keyframes mouse-scroll-btn-roll-out{
+  0%{stroke-dashoffset:0}
+  100%{stroke-dashoffset:-120}
+}
+@keyframes mouse-scroll-btn-roll-out{
+  0%{stroke-dashoffset:0}
+  100%{stroke-dashoffset:-120}
+}
+.scroll-down-wrap.no-border .section-down-arrow:before,.slider-down-arrow.no-border:before{
+  position:absolute;
+  content:'';
+  display:block;
+  left:50%;
+  margin-left:-1px;
+  top:22px;
+  background-color:rgba(255,255,255,0.5);
+  width:2px;
+  height:6px;
+  border-radius:10px;
+  transition:background-color .55s cubic-bezier(.5,.1,.07,1);
+  -webkit-animation:trackBallSlide 2.4s cubic-bezier(0.000,0.000,0.725,1.000) infinite;
+  animation:trackBallSlide 2.4s cubic-bezier(0.000,0.000,0.725,1.000) infinite;
+}
+@-webkit-keyframes trackBallSlide{
+  0%{
+    opacity:1;
+    -webkit-transform:scaleY(1) translateY(-10px);
+    transform:scaleY(1) translateY(-10px);
+  }
+  45%{
+    opacity:0;
+    -webkit-transform:scaleY(0.5) translateY(13px);
+    transform:scaleY(0.5) translateY(13px);
+  }
+  46%{
+    opacity:0;
+    -webkit-transform:scaleY(1) translateY(-10px);
+    transform:scaleY(1) translateY(-10px);
+  }
+  65%,100%{
+    opacity:1;
+    -webkit-transform:scaleY(1) translateY(-10px);
+    transform:scaleY(1) translateY(-10px);
+  }
+}
+@keyframes trackBallSlide{
+  0%{
+    opacity:1;
+    -webkit-transform:scaleY(1) translateY(-10px);
+    transform:scaleY(1) translateY(-10px);
+  }
+  45%{
+    opacity:0;
+    -webkit-transform:scaleY(0.5) translateY(13px);
+    transform:scaleY(0.5) translateY(13px);
+  }
+  46%{
+    opacity:0;
+    -webkit-transform:scaleY(1) translateY(-10px);
+    transform:scaleY(1) translateY(-10px);
+  }
+  65%,100%{
+    opacity:1;
+    -webkit-transform:scaleY(1) translateY(-10px);
+    transform:scaleY(1) translateY(-10px);
+  }
+}
+@keyframes nudgeMouse{
+  0%{
+    -webkit-transform:translateY(0);
+    transform:translateY(0);
+  }
+  45%{
+    -webkit-transform:translateY(8px);
+    transform:translateY(8px);
+  }
+  65%,100%{
+    -webkit-transform:translateY(0);
+    transform:translateY(0);
+  }
+}
+@-webkit-keyframes nudgeMouse{
+  0%{
+    -webkit-transform:translateY(0);
+    transform:translateY(0);
+  }
+  45%{
+    -webkit-transform:translateY(8px);
+    transform:translateY(8px);
+  }
+  65%,100%{
+    -webkit-transform:translateY(0);
+    transform:translateY(0);
+  }
+}
+
+
+
+
+
+
+
+
+
+
 .home-content h3 span {
-  color: var(--Bcolor);
+  color: var(--Main-color);
 }
 
 @keyframes slideRight {
@@ -537,3 +735,253 @@ div {
 
 /* Resetting some default margin and padding for consistency */
 
+
+
+
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  font-family: "Nunito", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  
+  background-color: #002733;
+}
+
+.orange {
+  color: #FF7A01;
+}
+
+.montserrat {
+  font-family: "Montserrat", sans-serif;
+}
+
+img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.container {
+  max-width: 1300px;
+  margin: 0px auto 0px auto;
+  padding: 0px 40px;
+}
+@media (min-width: 1200px) and (max-width: 1441px) {
+  .container {
+    max-width: 1250px;
+    padding: 0px 36px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    padding: 0px 30px;
+  }
+}
+@media (max-width: 479px) {
+  .container {
+    padding: 0px 30px 0px 20px;
+  }
+}
+
+.about-me {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.about-me .about-me-container {
+  position: relative;
+  border: 2px solid red;
+}
+@media (max-width: 960px) {
+  .about-me .about-me-container {
+    padding-bottom: 100px;
+  }
+}
+.about-me .about-me-container .about-me-title {
+  font-size: 55px;
+  color: #87A4B6;
+  font-weight: 700;
+  border: 2px solid white;
+}
+@media (max-width: 500px) {
+  .about-me .about-me-container .about-me-title {
+    font-size: 30px;
+  }
+}
+
+.about-me-flex-container {
+  margin-top: -25px;
+  margin-left: 150px;
+  left: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 960px) {
+  .about-me-flex-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0px;
+    gap: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .about-me-flex-container {
+    margin-top: -10px;
+  }
+}
+.about-me-flex-container .about-me-image {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  border: 2px solid greenyellow;
+}
+@media (max-width: 500px) {
+  .about-me-flex-container .about-me-image {
+    width: 300px;
+    height: 300px;
+  }
+}
+.about-me-flex-container .about-me-image .back-div {
+  position: absolute;
+  bottom: 0;
+  background-color: #dbecf1;
+  width: 80%;
+  height: 80%;
+}
+.about-me-flex-container .about-me-image .black-image {
+  z-index: -2;
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  height: 100%;
+}
+.about-me-flex-container .about-me-image .black-image img {
+  height: 100%;
+}
+.about-me-flex-container .about-me-image .main-image {
+  width: 70%;
+  height: 70%;
+  overflow: hidden;
+  position: absolute;
+  left: 25%;
+  top: 5%;
+  box-shadow: rgb(0, 0, 0) 0px 7px 50px 0px;
+  transition: all 0.2s ease-out;
+}
+.about-me-flex-container .about-me-image .main-image:hover {
+  transform-origin: top center;
+  transform: scale(1.1);
+  border-radius: 25px;
+}
+.about-me-flex-container .about-me-image .main-image img {
+  transform-origin: center center;
+  transform: scale(2);
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 0.2s ease-out;
+}
+.about-me-flex-container .about-me-image .main-image img:hover {
+  transform: scale(1);
+}
+.about-me-flex-container .about-me-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  flex: 0 0 40%;
+  border: 2px solid yellow;
+}
+@media (max-width: 960px) {
+  .about-me-flex-container .about-me-content {
+    flex-direction: row-reverse;
+  }
+}
+.about-me-flex-container .about-me-content .logo {
+  max-width: 200px;
+}
+.about-me-flex-container .about-me-content .logo img {
+  filter: drop-shadow(0 0 25px rgb(0, 0, 0));
+}
+@media (max-width: 500px) {
+  .about-me-flex-container .about-me-content .logo img {
+    transform: rotateZ(90deg);
+  }
+}
+.about-me-flex-container .about-me-content .text {
+  color: #87A4B6;
+  font-weight: 600;
+  font-size: 18px;
+}
+@media (max-width: 500px) {
+  .about-me-flex-container .about-me-content .text {
+    font-size: 16px;
+  }
+}
+
+
+
+.mail-button {
+  display: flex;
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-out;
+}
+.mail-button a {
+  display: flex;
+  border: 2px solid pink;
+}
+.mail-button img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  transition: all 0.2s ease-out;
+}
+
+
+.mail-button2 {
+  background-color: #001925;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border: 10px solid #001925;
+}
+.mail-button2 img {
+  filter: invert(56%) sepia(42%) saturate(4795%) hue-rotate(360deg) brightness(103%) contrast(105%);
+}
+.mail-button2:hover {
+  background-color: #FF7A01;
+  border: 10px solid #FF7A01;
+}
+.mail-button2:hover img {
+  filter: unset;
+  transform: scale(1.5);
+}
+
+.portfolio-link {
+  
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.portfolio-link a{
+  text-decoration: none;
+  color: white;
+
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+}
