--- a/Css/style.css
+++ b/Css/style.css
@@ -12,7 +12,9 @@
 
 :root {
   --Text-color : #ffffff;
-  --Main-color : crimson
+  --Main-color : crimson;
+
+  --BG-color : black;
 }
 
 html {
@@ -20,14 +22,12 @@ html {
   height: 320vh;
   margin: 0;
   padding: 0;
-  background-color: #000000;
+  background-color: black;
   font-size: 10px;
 }
-
 canvas {
   background-color: #000;
   width: 100%;
-  height: 100vh;
 }
 
 a {
@@ -73,8 +73,9 @@ nav {
   position: absolute;
 }
 /* Add this style for the scrolled state */
-
-
+nav.scrolled {
+  background-color: rgb(255, 255, 255);
+}
 
 .brand {
   font-size: 33px;
@@ -148,6 +149,18 @@ nav ul li a::after {
   transform-origin: right;
 }
 
+.overlay {
+  background-color: rgba(0, 0, 0, 0.95);
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  transition: opacity 650ms;
+  transform: scale(0);
+  opacity: 0;
+  display: none;
+}
 
 nav ul li a:hover::before,
 nav ul li a:hover::after {
@@ -169,6 +182,7 @@ p,
 div {
   padding: 6px;
 }
+
 .home-content {
   max-width: 600px;
   color: var(--Text-color);
@@ -177,7 +191,7 @@ div {
   left: 50%; /* Centering */
   transform: translate(-50%, -50%);
   list-style: none;
-  /* border: 2px solid rgb(0, 255, 34); */
+  /* 0, 255, 34); */
   position: absolute;
   font-family: 'Dancing Script', cursive;
   text-align: center;
@@ -204,7 +218,6 @@ div {
   font-weight: 700;
   transform: translateX(-100rem);
   animation: slideIn 0.5s forwards;
-    animation-delay: 0s;
   animation-delay: 1s;
 }
 
@@ -443,7 +456,7 @@ div {
 
 .social-buttons {
   border-radius: 5px;
-  /* border: 2px solid yellow; */
+  /*  */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -736,245 +749,3 @@ div {
 
 /* Resetting some default margin and padding for consistency */
 
-
-
-
-
-
-
-
-
-
-
-body {
-  
-  background-color: #002733;
-}
-
-.orange {
-  color: #FF7A01;
-}
-
-.montserrat {
-  font-family: "Montserrat", sans-serif;
-}
-
-img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.container {
-  max-width: 1300px;
-  margin: 0px auto 0px auto;
-  padding: 0px 40px;
-}
-@media (min-width: 1200px) and (max-width: 1441px) {
-  .container {
-    max-width: 1250px;
-    padding: 0px 36px;
-  }
-}
-@media (max-width: 767px) {
-  .container {
-    padding: 0px 30px;
-  }
-}
-@media (max-width: 479px) {
-  .container {
-    padding: 0px 30px 0px 20px;
-  }
-}
-
-.about-me {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-.about-me .about-me-container {
-  position: relative;
-  border: 2px solid red;
-}
-@media (max-width: 960px) {
-  .about-me .about-me-container {
-    padding-bottom: 100px;
-  }
-}
-.about-me .about-me-container .about-me-title {
-  font-size: 55px;
-  color: #87A4B6;
-  font-weight: 700;
-  border: 2px solid white;
-}
-@media (max-width: 500px) {
-  .about-me .about-me-container .about-me-title {
-    font-size: 30px;
-  }
-}
-
-.about-me-flex-container {
-  margin-top: -25px;
-  margin-left: 150px;
-  left: 100px;
-  display: flex;
-  justify-content: space-between;
-}
-@media (max-width: 960px) {
-  .about-me-flex-container {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 0px;
-    gap: 50px;
-  }
-}
-@media (max-width: 500px) {
-  .about-me-flex-container {
-    margin-top: -10px;
-  }
-}
-.about-me-flex-container .about-me-image {
-  position: relative;
-  width: 400px;
-  height: 400px;
-  border: 2px solid greenyellow;
-}
-@media (max-width: 500px) {
-  .about-me-flex-container .about-me-image {
-    width: 300px;
-    height: 300px;
-  }
-}
-.about-me-flex-container .about-me-image .back-div {
-  position: absolute;
-  bottom: 0;
-  background-color: #dbecf1;
-  width: 80%;
-  height: 80%;
-}
-.about-me-flex-container .about-me-image .black-image {
-  z-index: -2;
-  position: absolute;
-  left: 10px;
-  bottom: 10px;
-  height: 100%;
-}
-.about-me-flex-container .about-me-image .black-image img {
-  height: 100%;
-}
-.about-me-flex-container .about-me-image .main-image {
-  width: 70%;
-  height: 70%;
-  overflow: hidden;
-  position: absolute;
-  left: 25%;
-  top: 5%;
-  box-shadow: rgb(0, 0, 0) 0px 7px 50px 0px;
-  transition: all 0.2s ease-out;
-}
-.about-me-flex-container .about-me-image .main-image:hover {
-  transform-origin: top center;
-  transform: scale(1.1);
-  border-radius: 25px;
-}
-.about-me-flex-container .about-me-image .main-image img {
-  transform-origin: center center;
-  transform: scale(2);
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition: all 0.2s ease-out;
-}
-.about-me-flex-container .about-me-image .main-image img:hover {
-  transform: scale(1);
-}
-.about-me-flex-container .about-me-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 50px;
-  flex: 0 0 40%;
-  border: 2px solid yellow;
-}
-@media (max-width: 960px) {
-  .about-me-flex-container .about-me-content {
-    flex-direction: row-reverse;
-  }
-}
-.about-me-flex-container .about-me-content .logo {
-  max-width: 200px;
-}
-.about-me-flex-container .about-me-content .logo img {
-  filter: drop-shadow(0 0 25px rgb(0, 0, 0));
-}
-@media (max-width: 500px) {
-  .about-me-flex-container .about-me-content .logo img {
-    transform: rotateZ(90deg);
-  }
-}
-.about-me-flex-container .about-me-content .text {
-  color: #87A4B6;
-  font-weight: 600;
-  font-size: 18px;
-}
-@media (max-width: 500px) {
-  .about-me-flex-container .about-me-content .text {
-    font-size: 16px;
-  }
-}
-
-
-
-.mail-button {
-  display: flex;
-  height: 80px;
-  width: 80px;
-  border-radius: 50%;
-  padding: 15px;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.2s ease-out;
-}
-.mail-button a {
-  display: flex;
-  border: 2px solid pink;
-}
-.mail-button img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  transition: all 0.2s ease-out;
-}
-
-
-.mail-button2 {
-  background-color: #001925;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  border: 10px solid #001925;
-}
-.mail-button2 img {
-  filter: invert(56%) sepia(42%) saturate(4795%) hue-rotate(360deg) brightness(103%) contrast(105%);
-}
-.mail-button2:hover {
-  background-color: #FF7A01;
-  border: 10px solid #FF7A01;
-}
-.mail-button2:hover img {
-  filter: unset;
-  transform: scale(1.5);
-}
-
-.portfolio-link {
-  
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.portfolio-link a{
-  text-decoration: none;
-  color: white;
-
-  padding: 10px;
-  margin: 10px;
-  border-radius: 5px;
-}
