--- a/Css/style.css
+++ b/Css/style.css
@@ -22,12 +22,13 @@ html {
   height: 320vh;
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: var(--BG-color);
   font-size: 10px;
 }
 canvas {
-  background-color: #000;
+  background-color: var(--BG-color);
   width: 100%;
+  height: 100vh;
 }
 
 a {
@@ -74,7 +75,7 @@ nav {
 }
 /* Add this style for the scrolled state */
 nav.scrolled {
-  background-color: rgb(255, 255, 255);
+  background-color: var(--Text-color);
 }
 
 .brand {
@@ -148,20 +149,6 @@ nav ul li a::after {
   bottom: 0;
   transform-origin: right;
 }
-
-.overlay {
-  background-color: rgba(0, 0, 0, 0.95);
-  position: fixed;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  transition: opacity 650ms;
-  transform: scale(0);
-  opacity: 0;
-  display: none;
-}
-
 nav ul li a:hover::before,
 nav ul li a:hover::after {
   transform: scaleX(1);
@@ -180,7 +167,7 @@ nav ul li a:hover::after {
 h1,
 p,
 div {
-  padding: 6px;
+  /* padding: 6px; */
 }
 
 .home-content {
@@ -517,7 +504,7 @@ div {
 }
 .social-button:focus,
 .social-button:hover {
-  color: #000000;
+  color: var(--BG-color);
   text-decoration: none;
 }
 .social-button:focus::after,
@@ -600,7 +587,7 @@ div {
 @media screen and (max-width: 700px) {
   .menu-toggle {
     display: block;
-    background-color: #000;
+    background-color: var(--BG-color);
   }
 
   nav {
@@ -611,7 +598,7 @@ div {
     align-items: center;
     height: 100vh;
     text-align: center;
-    background-color: black;
+    background-color: var(--BG-color);
   }
 
   nav ul {
@@ -633,7 +620,7 @@ div {
 
   .overlay.menu-open,
   nav.menu-open {
-    background-color: #000;
+    background-color: var(--BG-color);
   display: flex;
   transform: scale(1);
   opacity: 1;
@@ -646,7 +633,7 @@ div {
 @media screen and (max-width: 700px) {
   .menu-toggle {
     display: block;
-    background-color: #000;
+    background-color: var(--BG-color);
   }
 
   nav {
@@ -657,7 +644,7 @@ div {
     align-items: center;
     height: 100vh;
     text-align: center;
-    background-color: black;
+    background-color: var(--BG-color);
   }
 
   nav ul {
@@ -679,7 +666,7 @@ div {
 
   .overlay.menu-open,
   nav.menu-open {
-    background-color: #000;
+    background-color: var(--BG-color);
     display: flex;
     transform: scale(1);
     opacity: 1;
