--- a/Css/style.css
+++ b/Css/style.css
@@ -18,7 +18,7 @@
   }
   body {
     /* background-color:#000000; */
-    background-color: #2B2C2F;
+    background-color: black;
   }
 
   html {
@@ -29,7 +29,7 @@
     font-size: 10px;
   }
   canvas {
-    background-color: #2B2C2F;
+    background-color: black;
     width: 100%;
     height: 100vh;
   }
@@ -801,9 +801,7 @@
     color: #FF7A01;
   }
 
-  .montserrat {
-    font-family: "Montserrat", sans-serif;
-  }
+
 
   img {
     width: 100%;
@@ -987,7 +985,7 @@
   }
   .mail-button img {
     -o-object-fit: contain;
-      object-fit: contain;
+    object-fit: contain;
     transition: all 0.2s ease-out;
   }
 
@@ -1072,7 +1070,7 @@
   }
   .btn:hover{
     background-color: #ffffff;
-    transition: 0.7s;
+    transition: 0.6s;
     color: #000;
     font-weight: 300;
   }
@@ -1093,7 +1091,7 @@
   {
     transform: translate(-50%,60px);
     animation: bottom_top 0.5s linear forwards;
-    animation-delay: 12s;
+    animation-delay: 2s;
   }
   .btn .completed
   {
@@ -1261,3 +1259,170 @@
       /* height: 50px; */
     }
   } 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .Skil{
+    font-size: 4rem;
+  }
+  
+    
+    .skills-section{
+    padding-top: 12%;
+    color: white;
+    }
+    
+    .skills-header{
+    text-align: center;
+    color: #fff;
+    padding: 1rem;
+    position: relative;
+    }
+    
+    .skills-header:after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 4px;
+    background-color: #2ecc71;
+    border-radius: 2px;
+    }
+    
+    .skills-container{
+    display: grid;
+    grid-tempLate-columns: repeat(5, 1fr);
+    justify-content:center;
+    align-items:center;
+    text-align: center;
+    grid-gap:1rem;
+    padding: 1rem 80px;
+    font-size: 1.2rem;
+    }
+    .skills-box{
+    padding: 1rem;
+    color: #000;
+    cursor:pointer;
+    }
+  .skills-box:hover > .skills-title::after, 
+  .skills-box:hover > .skills-title::before{
+  width: 40px;
+  transition: 0.9s;
+  }
+.skills-box:hover .skills-img{
+transform: translateX(-20px);
+transform: scale(1.1);
+transition: transform 0.3s ease-in-out;
+
+}
+    .skills-title{
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+    position: relative;
+    }
+    
+    .skills-title:after{
+    content: '';
+    position:absolute;
+    bottom: 0;
+    rigth: 50%;
+    width:20px;
+    height:4px;
+    border-radius: 2px 0 0 2px;
+    background-color: #2ecc71;
+    transition: .5s;
+    }
+    
+    .skills-title:before{
+    content: '';
+    position:absolute;
+    bottom: 0;
+    /* left: 50%; */
+    width:100px;
+    height:4px;
+    border-radius: 0 2px 2px 0;
+    background-color: #2ecc71;
+    }
+    
+    .skills-icons{
+    width:50px;
+    z-index:2;
+    }
+    
+    .skills-img{
+    width:90px;
+    height:90px;
+    position: relative;
+    border-radius: 45px;
+    background-color: #fff;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    transition: .5s;
+    }
+    
+    .skills-img:after{
+    content: '';
+    position:absolute;
+    top:0;
+    left: 0;
+    width:50%;
+    height:90px;
+    background: rgba(100, 100, 100, 0.5);
+    border-radius: 45px 0 0 45px;
+    }
+    .skills-title h3{
+    color: #ffffff;
+    margin-top: 1.5rem;
+    }
+    @media screen and (max-width:990px){
+     .skills-container{
+     grid-tempLate-columns: repeat(2, 1fr);
+     padding: 2rem 50px;
+     }
+    }
+    
+    @media screen and (max-width:650px){
+     .skills-container{
+     grid-tempLate-columns:2fr;
+     padding: 2rem 50px;
+     }
+    }
