--- a/Css/style.css
+++ b/Css/style.css
@@ -29,7 +29,7 @@
     font-size: 10px;
   }
   canvas {
-    background-color: black;
+    background-color: rgb(53, 53, 53);
     width: 100%;
     height: 100vh;
   }
@@ -1071,8 +1071,8 @@
   .btn:hover{
     background-color: #ffffff;
     transition: 0.6s;
-    color: #000;
-    font-weight: 300;
+    color: var(--Main-color);
+    font-weight: 700;
   }
   .btn .fas
   {
@@ -1105,7 +1105,7 @@
   .btn.active .completed
   {
     animation: top_bottom 1.3s linear forwards;
-    animation-delay: 6.5s;
+    animation-delay: 1.5s;
   }
   .btn.active
   {
