--- a/Css/style.css
+++ b/Css/style.css
@@ -29,7 +29,8 @@ html {
   font-size: 10px;
 }
 canvas {
-  background-color: rgb(53, 53, 53);
+/*background-color: rgb(53, 53, 53);*/
+  background-color: black;
   width: 100%;
   height: 100vh;
 }
